Release 1.23.5: legacy isolation, validation, compat docs, and tests
- Split permissionsex-legacy-stub (compile-only PermissionsEx) from legacy-api
- Move ru.tehkode.utils.* into legacy-api; add legacy-compat regression module
- PexYamlValidator + PexConfigValidator for clear config/permissions.yml errors
- Paper 1.21.11 test API alignment; hook-plugin smoke test (skips when MockBukkit partial)
- ServerVersions range checks for Minecraft 1.8.8–1.26.1; remove plugin.yml api-version
- docs/COMPATIBILITY.md, docs/testing/REAL_SERVER_MATRIX.md, docs/examples/*
- Version bump to 1.23.5 (release)

Co-authored-by: Rono <rowan-smith@users.noreply.github.com>